# sandbox-viewer

./: .gitignore  next.config.js  package-lock.json  package.json
sandbox-viewer/: CLAUDE.md
sandbox-viewer/src/app/: globals.css  page.module.css  page.tsx
sandbox-viewer/src/app/api/runs/[runId]/rollouts/: route.ts
sandbox-viewer/src/app/api/runs/[runId]/rollouts/[rolloutId]/file/: route.ts
sandbox-viewer/src/components/: CommandLog.module.css  CommandLog.tsx  FileViewer.tsx  FilesystemBrowser.module.css  FilesystemBrowser.tsx  RolloutInfo.module.css  RolloutInfo.tsx  RolloutList.module.css  RolloutList.tsx
sandbox-viewer/src/types/: index.ts
src/app/: layout.tsx  page.module.css  page.tsx
src/app/api/runs/: route.ts
src/app/api/runs/[runId]/rollouts/[rolloutId]/commands/: route.ts
src/app/api/runs/[runId]/rollouts/[rolloutId]/filesystem/: route.ts
src/components/: CommandLog.module.css  CommandLog.tsx  FileViewer.module.css  RolloutList.tsx  RunList.module.css  RunList.tsx
src/types/: index.ts
swe-grep-env-1/: README.md  pyproject.toml  swe_grep_env.py
swe-grep-env-1/.prime/: .env-metadata.json
swe-grep-env-1/src/: check.py  clean.py  cleanup.py  data_gen_line.py  debug_wrapper.py  demo.py  idk.py  upload.py
