[project]
name = "swe-grep-env"
description = "Reimplementation of Cognition's SWE Grep Agent"
tags = ["train", "eval"]
version = "0.1.6.post2"
requires-python = ">=3.10"
dependencies = [
    "chatan>=0.2.1",
    "verifiers==0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "swe_grep_env.py", 
  "src", 
  "pyproject.toml"
] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
